--- a/package.json
+++ b/package.json
@@ -2,6 +2,10 @@
   "name": "@marksteve/firebase-auth",
   "description": "Express and Koa middlewares for verifying Firebase Auth tokens",
   "version": "0.0.2",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/marksteve/firebase-auth.git"
+  },
   "files": [
     "./dist"
   ],
